# strip-vm

./: .gitignore  Cargo.toml  build.sh
cli/: Cargo.toml
cli/src/: debug.rs  main.rs
docs/: assembler.md  blinky.s  boot.s  rainbow.s  strip-assembler.md
firmware/: Cargo.toml
firmware/src/: led_strip.rs  main.rs
rtl/: .gitignore  RPLL.v  boot.rom  build.sbt  build.sc  build.scala  build.sh  constraints.cst  strip.gprj
rtl/impl/: project_process_config.json
rtl/impl/gwsynthesis/: gowinsyn.cfg
rtl/src/: alu.v  constraints.cst  cpu.v  mmio.v  pll.v  top.v  vga.v
rtl/src/main/scala/strip/: ILI6122.scala  TangNano.scala
shared/: Cargo.toml  build.rs
shared/src/: compiler.rs  grammar.lalrpop  lib.rs  parser.rs  vm.rs
shared/tests/: vm_test.rs
