[package]
name = "strip-shared"
version = "0.0.0"
authors = ["Vitaly Domnikov <oss@vitaly.codes>"]
edition = "2018"
build = "build.rs"

[features]
std = ["lalrpop-util", "lalrpop"]
default = ["std"]

[dependencies.byteorder]
version = "1.3.2"
default-features = false

[dependencies.lalrpop-util]
version = "0.18.1"
optional = true

[build-dependencies.lalrpop]
version = "0.18.1"
features = ["lexer"]
optional = true